[GTK] Some tests fail because they do not assume the popup menu captures click events https://bugs.webkit.org/show_bug.cgi?id=40601

Reviewed by Carlos Garcia Campos.

Tools:

Popdown all attached menus when moving between tests and between each new
event sent to the WebView. This prevents context and popup menus from eating
events.

* WebKitTestRunner/PlatformWebView.h: Added a helper method to do menu popdown.
* WebKitTestRunner/TestController.cpp: Add a specialization of these methods for GTK+.
* WebKitTestRunner/gtk/EventSenderProxyGtk.cpp:
(WTR::dispatchEvent): Popdown all menus between dispatching events.
(WTR::EventSenderProxy::replaySavedEvents): Pass the view when dispatching events.
(WTR::EventSenderProxy::sendOrQueueEvent): Pass the view when dispatching events.
* WebKitTestRunner/gtk/PlatformWebViewGtk.cpp:
(WTR::PlatformWebView::hideAllPopupMenus): Added this helper.
* WebKitTestRunner/gtk/TestControllerGtk.cpp:
(WTR::TestController::platformConfigureViewForTest): Added this stub, which is no
longer in the platform-independent file.
(WTR::TestController::platformResetPreferencesToConsistentValues): Popdown menus.

LayoutTests:

* platform/gtk/TestExpectations: Unskip tests that are passing now
and classify remaining failures.
* platform/gtk/editing/selection/5354455-2-expected.txt: Rebaselined.
* platform/gtk/editing/selection/doubleclick-crash-expected.png: Rebaseline.
* platform/gtk/editing/selection/doubleclick-crash-expected.txt: Rebaseline.
* platform/gtk/editing/selection/user-select-all-image-with-single-click-expected.txt: Rebaselined.
* platform/gtk/editing/selection/user-select-all-with-single-click-expected.txt: Rebaselined.
* platform/gtk/fast/events/mouseup-from-button2-expected.txt: Rebaseline.
* platform/gtk/fast/events/shadow-event-path-2-expected.txt: Rebaseline.
* platform/gtk/fast/events/shadow-event-path-expected.txt: Rebaseline.
* platform/gtk/fast/events/updateLayoutForHitTest-expected.txt: Rebaselined.

Canonical link: https://commits.webkit.org/162844@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184015 268f45cc-cd09-0410-ab3c-d52691b4dbfc